--- a/aboutus/who are we.css
+++ b/aboutus/who are we.css
@@ -7,6 +7,22 @@
 	color: #284265;
 
 }
+.main-nav {
+    background-color: #284265 !important;
+	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.layer {
+    fill: #E3FFF9 !important;
+}
+.navLink {
+    color: #ffffff !important;
+}
+.logotext {
+    color: #ffffff;
+}
+.active-nav-a {
+    color: #FC7900 !important;
+}
 
 .about-banner {
     height: 20em;
@@ -16,6 +32,7 @@
 h1 {
     font-size: 3em;
     color: #FC7900;
+	font-weight: 700 !important;
 }
 .about-banner img {
     width: 100%;
