--- a/css/blogCSS/blog.css
+++ b/css/blogCSS/blog.css
@@ -6,8 +6,26 @@
     box-sizing: border-box;
     font-family: 'Inter', sans-serif;
 }
+
+.main-nav {
+    background-color: #284265 !important;
+	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.layer {
+    fill: #E3FFF9 !important;
+}
+.navLink {
+    color: #ffffff !important;
+}
+.logotext {
+    color: #ffffff;
+}
+.active-nav-a {
+    color: #FC7900 !important;
+}
+
 .about-banner {
-    height: 30em;
+    height: 20em;
     overflow: hidden;
 }
 h1 {
@@ -18,7 +36,7 @@ h1 {
 
 .about-banner img {
     width: 100%;
-    height: 50%;
+    height: 100%;
     object-fit: cover;
     position: relative;
     z-index: -1;
