--- a/css/login/login.css
+++ b/css/login/login.css
@@ -5,10 +5,28 @@
     box-sizing: border-box;
     font-family: 'Inter', sans-serif;
 }
+.main-nav {
+    background-color: #284265 !important;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.layer {
+    fill: #E3FFF9 !important;
+}
+.navLink {
+    color: #ffffff !important;
+}
+.logotext {
+    color: #ffffff;
+}
+.active-nav-a {
+    color: #FC7900 !important;
+}
+
 .login_container{
     background-color: #E3FFF9;
     padding: 100px 50px;
 }
+
 .login_page{
     display: flex;
     justify-content: space-around;
