--- a/dashboard/mainDashboard/style.css
+++ b/dashboard/mainDashboard/style.css
@@ -10,6 +10,20 @@
 body {
     background-color: #E3FFF9;
 }
+.main-nav {
+    background-color: #284265 !important;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.layer {
+    fill: #E3FFF9 !important;
+}
+.navLink {
+    color: #ffffff !important;
+}
+.logotext {
+    color: #ffffff;
+}
+
 .dashboard {
     display: flex;
     flex-direction: column;
