--- a/dashboard/style.css/dashboard.css
+++ b/dashboard/style.css/dashboard.css
@@ -3,6 +3,25 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.main-nav {
+    background-color: #284265 !important;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+.layer {
+    fill: #E3FFF9 !important;
+}
+.navLink {
+    color: #ffffff !important;
+}
+
+.active-nav {
+    color:#FC7900 !important;
+}
+
+.logotext {
+    color: #ffffff;
+}
 .main-container {
     width: 95%;
     margin: auto;
@@ -36,7 +55,6 @@ body {
     font-size: 1em;
     line-height: 175.02%;
 }
-
 .lesson {
     height: 100%;
     border: 3px solid #284265;
