--- a/css/indexCSS/Our Pricing.css
+++ b/css/indexCSS/Our Pricing.css
@@ -302,13 +302,16 @@ footer {
     font-weight: 300;
 }
 .link-nav a i {
-    color: #FFFFFF !important;
+    color: #FC7900 !important;
 }
 footer h3 {
     margin-bottom: 1.5em;
     font-size: 1.5em;
     font-weight: 700;
     color: #FFFFFF;
+}
+footer .link-nav li a:hover{
+    color: #FC7900 !important
 }
 
 .img-grid {
@@ -427,7 +430,7 @@ footer h3 {
 }
 
 .socail {
-    color: #C1FFF2 !important;
+    color: #FC7900 !important;
     flex-direction: row;
     /* justify-content: center; */
 }
@@ -436,7 +439,7 @@ footer h3 {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #515151;
+    background-color: #ffffff;
     height: 3em;
     width: 3em;
     border-radius: 50%;
