--- a/css/indexCSS/Nav & Hero.css
+++ b/css/indexCSS/Nav & Hero.css
@@ -9,27 +9,46 @@
     scroll-behavior: smooth;
     text-decoration: none;
 }
-body {
+html {
     overflow-x: hidden;
 }
+body {
+    overflow-x: hidden;
+} 
+.main-nav {
+    overflow: hidden;
+    background-color: #284265 !important;
+	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    position: sticky;
+    top: 0px;
+    background-color: #BDF7FF;
+    width: 100%;
+    z-index: 10000;
+}
+
+.layer {
+    fill: #E3FFF9 !important;
+}
+.navLink {
+    color: #ffffff !important;
+}
+.logotext {
+    color: #ffffff;
+}
+.active-nav-a {
+    color: #FC7900 !important;
+}
+
 .wrapper{
     width: 80%;
     margin: auto;
     height: 100%;
 }
 header{
+    overflow: hidden;
     background-color: #BDF7FF;
     height: 90vh;
     min-height: 500px;
-    position: relative;
-}
-.main-nav{
-    position: sticky;
-    top: 0;
-    background-color: #BDF7FF;
-    width: 100%;
-    z-index: 10000;
-    transition: .3s all;
 }
 .nav-bg {
     background-color: #284265 !important;
@@ -114,22 +133,16 @@ header{
 .hamburger.active .bar:nth-child(3){
     transform: translateY(-8px) rotate(-45045deg);
 }
-.burger-toggel{
-    transform: translateX(0) !important; 
-    transition: .3s all;
-    opacity: 0;
-}
-
 .navMenu{
     transform: translateX(100%); 
-    position: absolute;
+    position: fixed;
     opacity: 1;
     top: -40px;
     right: 0;
     gap: 5px;
     padding: 98px 0 20px;
     width: 70%;
-    height: 100vh;
+    height: 200vh;
     text-align: center;
     transition: 0.3s;
     margin-top: 2em;
@@ -139,19 +152,32 @@ header{
     z-index: -1;
     transition: .3s ease-in-out;
 }
+.burger-toggel{
+    transform: translateX(0) !important; 
+    transition: .3s all;
+}
+
 .navMenu.active{
     right: 0;
 }
-.navMenu li {
-    padding: 1.2em 1em;
+.navMenu a {
+    width: 100%;
+    display: block;
 }
-.navMenu li:hover {
+
+@media only screen and (max-width: 1099px) {
+    .navMenu a:hover {
     border-left: 10px solid #FC7900;
     background-color: #BDF7FF;
     transition: .3s all;
+    } 
+    .navMenu a  {
+        padding: 1em 10px;
+    }
     
 }
-.navMenu li:hover a  {
+
+.navMenu a:hover {
     color: #FC7900 !important;
 }
 
@@ -310,6 +336,7 @@ header{
     }
     #vec2{
         width: 24%;
+        z-index: -1;
     }
 }
 @media only screen and (min-width: 1100px) {
